// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Renders Correctly - Desktop 1`] = `
<div
  class="w-full h-12 border-b border-main-veryLight select-none bg-white"
  id="menu"
>
  <h1
    class="w-full md:w-auto h-12 text-4xl font-heading text-main md:mx-8 inline-block text-center"
  >
    <router-link-stub
      to="/"
    >
      Munro
    </router-link-stub>
  </h1>
   
  <svg
    class="h-12 p-2 mr-2 fill-current text-main md:hidden inline-block float-right absolute right-0"
    viewBox="0 0 24 24"
  >
    <path
      d="M0 0h24v24H0z"
      fill="none"
    />
     
    <path
      d="M3 18h18v-2H3v2zm0-5h18v-2H3v2zm0-7v2h18V6H3z"
    />
  </svg>
   
  <nav
    class="text-main text-lg font-normal h-screen--12 md:mr-2 md:h-12 md:float-right relative z-50 top--12 md:top-0 md:bg-transparent bg-white flex flex-col justify-center align-center w-full md:w-auto md:inline-block mt-12 md:mt-0"
    name="shrink"
  >
    <router-link-stub
      class="menu-item"
      to="/leagues"
    >
      Leagues
    </router-link-stub>
     
    <router-link-stub
      class="menu-item"
      to="/latest-results"
    >
      Latest Results
    </router-link-stub>
     
    <router-link-stub
      class="menu-item"
      to="/upload"
    >
      Upload Results
    </router-link-stub>
     
    <!---->
  </nav>
</div>
`;

exports[`Renders Correctly - Desktop 2`] = `
<div
  class="w-full h-12 border-b border-main-veryLight select-none bg-white"
  id="menu"
>
  <h1
    class="w-full md:w-auto h-12 text-4xl font-heading text-main md:mx-8 inline-block text-center"
  >
    <router-link-stub
      to="/"
    >
      Munro
    </router-link-stub>
  </h1>
   
  <svg
    class="h-12 p-2 mr-2 fill-current text-main md:hidden inline-block float-right absolute right-0"
    viewBox="0 0 24 24"
  >
    <path
      d="M0 0h24v24H0z"
      fill="none"
    />
     
    <path
      d="M3 18h18v-2H3v2zm0-5h18v-2H3v2zm0-7v2h18V6H3z"
    />
  </svg>
   
  <nav
    class="text-main text-lg font-normal h-screen--12 md:mr-2 md:h-12 md:float-right relative z-50 top--12 md:top-0 md:bg-transparent bg-white flex flex-col justify-center align-center w-full md:w-auto md:inline-block mt-12 md:mt-0"
    name="shrink"
  >
    <router-link-stub
      class="menu-item"
      to="/leagues"
    >
      Leagues
    </router-link-stub>
     
    <router-link-stub
      class="menu-item"
      to="/latest-results"
    >
      Latest Results
    </router-link-stub>
     
    <router-link-stub
      class="menu-item"
      to="/upload"
    >
      Upload Results
    </router-link-stub>
     
    <!---->
  </nav>
</div>
`;

exports[`Renders Correctly - Mobile 1`] = `
<div
  class="w-full h-12 border-b border-main-veryLight select-none bg-white"
  id="menu"
>
  <h1
    class="w-full md:w-auto h-12 text-4xl font-heading text-main md:mx-8 inline-block text-center"
  >
    <router-link-stub
      to="/"
    >
      Munro
    </router-link-stub>
  </h1>
   
  <svg
    class="h-12 p-2 mr-2 fill-current text-main md:hidden inline-block float-right absolute right-0"
    viewBox="0 0 24 24"
  >
    <path
      d="M0 0h24v24H0z"
      fill="none"
    />
     
    <path
      d="M3 18h18v-2H3v2zm0-5h18v-2H3v2zm0-7v2h18V6H3z"
    />
  </svg>
   
  <nav
    class="text-main text-lg font-normal h-screen--12 md:mr-2 md:h-12 md:float-right relative z-50 top--12 md:top-0 md:bg-transparent bg-white flex flex-col justify-center align-center w-full md:w-auto md:inline-block mt-12 md:mt-0 sr-only smallWindow"
    name="shrink"
    style="display: none;"
  >
    <router-link-stub
      class="menu-item"
      to="/leagues"
    >
      Leagues
    </router-link-stub>
     
    <router-link-stub
      class="menu-item"
      to="/latest-results"
    >
      Latest Results
    </router-link-stub>
     
    <router-link-stub
      class="menu-item"
      to="/upload"
    >
      Upload Results
    </router-link-stub>
     
    <!---->
  </nav>
</div>
`;
